# allformers

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  train_base.py  train_gpt2.py  train_llama.py  train_wikipedia.py
allformers/: __init__.py  utils.py
allformers/data/: __init__.py  finepdfs_edu.py  fineweb_edu.py  streaming.py  wikipedia.py
allformers/models/: __init__.py
allformers/models/gpt2/: README.md  __init__.py  gpt2.py
allformers/models/llama/: README.md  __init__.py  llama.py
scripts/: clean.py  plot_wandb.py  view_run.py
tests/: __init__.py  test_utils.py
tests/data/: __init__.py  test_finepdfs_edu.py  test_fineweb_edu.py  test_streaming.py  test_wikipedia.py
tests/models/: __init__.py
tests/models/gpt2/: __init__.py  test_gpt2.py
tests/models/llama/: test_llama.py
