[project]
name = "allformers"
version = "0.1.0"
description = "Readable transformer implementations for learning - GPT-2, and more to come"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.9.1",
    "einops>=0.8.1",
    "transformers>=5.0.0rc0",
    "tiktoken>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ipython>=8.0.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (downloads from internet)",
]
