[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "allformers"
version = "0.1.0"
description = "Readable transformer implementations for learning - GPT-2, and more to come"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.9.1",
    "einops>=0.8.1",
    "transformers>=5.0.0rc0",
    "tiktoken>=0.12.0",
    "datasets>=4.4.2",
    "wandb>=0.23.1",
    "typer>=0.20.1",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ipython>=8.0.0",
]

[tool.uv]
package = true

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (downloads from internet)",
]
